--- a/Alfred.alfredpreferences/preferences/local/965e4179de212c264ebce5830abeb1e7796d503a/appearance/prefs.plist
+++ b/Alfred.alfredpreferences/preferences/local/965e4179de212c264ebce5830abeb1e7796d503a/appearance/prefs.plist
@@ -4,5 +4,7 @@
 <dict>
 	<key>currentthemeuid</key>
 	<string>theme.bundled.osx</string>
+	<key>darkthemeuid</key>
+	<string>theme.custom.81C1948E-4D12-41BB-B0CE-12E88A7A770B</string>
 </dict>
 </plist>
